tests/hole_top_level_const_bad.stderr
tests/hole_top_level_const_bad.sl:2:7: error: SL2007: identifier '_' is reserved
