tests/hole_top_level_const_bad.sl
// Verifies hole top-level level const is rejected.
const _ = 1
